# jupyter_bioacoustic

./: .gitignore  .pre-commit-config.yaml  CLAUDE_SECTIONS_REF_WORKPLAN.md  CONFIG_FORMS.md  CONFIG_FORMS_plan.md  MAP_TEST.py  README.md  detections-test.csv  dev-geo-review-output.csv  dev-relink.sh  develop.py  form-review.yaml  generate_dev_data.py  generate_test_data.py  myst.yml  pyproject.toml  tmp.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  publish.yml  test.yml  zizmor.yml
demo/: copy_samples.sh  data-collection-example.ipynb  simple-example.ipynb  simple-examples.ipynb  soundhub_detections.py  sync-example.ipynb  visualizations-3rd_party.ipynb  visualizations.ipynb
demo/annotator_config/: annotate-multibox.yaml  review-simple.yaml  simple-examples-3b.yaml  simple-examples-3c.yaml  simple-examples-3c2.yaml
demo/annotator_config/config/: simple-examples-3.yaml  sync-example.yaml
demo/annotator_config/forms/: simple-examples-3.yaml  simple-examples-3a.yaml
demo/annotator_config/projects/: simple-examples-3.yaml
demo/config/: annotate-multibox.yaml  annotate-simple.yaml  bioacoustic-annotator-examples.1.yaml  review-simple.yaml  simple-examples-3b.yaml  simple-examples-3c.yaml  simple-examples-3c2.yaml
demo/config/forms/: simple-examples-3a.yaml  simple-examples-3c2.yaml
demo/data/: annotate-data.csv  categories-small.csv  categories.csv  detections.N-dse.csv  review-data.csv  species_counts.N-dse.csv
demo/projects/: config.yaml
installer/: README.md
installer/ci/: build-installers.yml
installer/conda/: menu.json
installer/icon/: make-icons.sh
installer/launcher/: jba_launcher.py
installer/macos/: build-pkg.sh  make-dist.sh  make-local-app.sh  set-start-folder.command  splash.js
installer/macos/app/JupyterBioacoustic.app/Contents/: Info.plist
installer/macos/app/JupyterBioacoustic.app/Contents/MacOS/: launch
installer/macos/scripts/: postinstall
installer/manifest/: pixi.toml
installer/shared/: bootstrap.sh
installer/windows/: build.ps1  installer.iss  launch.cmd  make-dist-win.sh  set-start-folder.cmd
jupyter_bioacoustic/: __init__.py  _kernel_helpers.py  _validation.py  api.py  cli.py  package-lock.json  package.json  tsconfig.json
jupyter_bioacoustic/audio/: __init__.py  _shared.py  io.py  io_aws.py  io_gcs.py  io_https.py  io_local.py
jupyter_bioacoustic/builder/: __init__.py  core.py  prompts.py
jupyter_bioacoustic/config_builder/: __init__.py  core.py  notebook.py  summary.py  templates.py
jupyter_bioacoustic/config_builder/nb/: starter-notebook.ipynb
jupyter_bioacoustic/labextension/: build_log.json  install.json  package.json
jupyter_bioacoustic/labextension/static/: 509.12acc963c67d83017cba.js  509.1c60c20f1e94a8051786.js  509.1f56cef0c2a8cc08a6dc.js  509.4b743c2605b82ef8594c.js  509.4fc9fedbe4891f5796ba.js  509.980561687afda43568f7.js  509.9d852295a17ae9e2a75a.js  509.c18e928e0624637463e4.js  509.f31fe6942edfd6ba30e3.js  509.f43a038dedc4a743bcc0.js  lib_index_js.01e6b6b1295f4f45bdf5.js  lib_index_js.01e6b6b1295f4f45bdf5.js.map  lib_index_js.02666c05422ac2600cd7.js  lib_index_js.02666c05422ac2600cd7.js.map  lib_index_js.04de17b435af08590b13.js  lib_index_js.04de17b435af08590b13.js.map  lib_index_js.089c95d40dcb9cbb202f.js  lib_index_js.089c95d40dcb9cbb202f.js.map  lib_index_js.096c71d7c96455bb0236.js  lib_index_js.096c71d7c96455bb0236.js.map  lib_index_js.0c8a376bb8490d2fe5e3.js  lib_index_js.0c8a376bb8490d2fe5e3.js.map  lib_index_js.0e391104279bb22e78bd.js  lib_index_js.0e391104279bb22e78bd.js.map  lib_index_js.20429759443177d371e8.js  lib_index_js.20429759443177d371e8.js.map  lib_index_js.28be0e85a20b06bd5b17.js  lib_index_js.28be0e85a20b06bd5b17.js.map  lib_index_js.3fead5cc225629f3ade4.js  lib_index_js.3fead5cc225629f3ade4.js.map  lib_index_js.485f8361ae17c1544c75.js  lib_index_js.485f8361ae17c1544c75.js.map  lib_index_js.6135d21b48c6fd1140f7.js  lib_index_js.6135d21b48c6fd1140f7.js.map  lib_index_js.64857df8b6ffbb68ff78.js  lib_index_js.64857df8b6ffbb68ff78.js.map  lib_index_js.6709f6176f643764fb15.js  lib_index_js.6709f6176f643764fb15.js.map  lib_index_js.7cb96c1b2770270868bb.js  lib_index_js.7cb96c1b2770270868bb.js.map  (+176 more)
jupyter_bioacoustic/src/: index.ts  kernel.ts  plugin.ts  py_chunks.ts  python.ts  styles.ts  text.ts  types.ts  util.ts
jupyter_bioacoustic/src/__tests__/: AppSection.test.ts  python.test.ts  sourceTypeDetection.test.ts  util.test.ts
jupyter_bioacoustic/src/builder/: ChatPanel.ts  ConfigPreview.ts  index.ts  plugin.ts  python.ts
jupyter_bioacoustic/src/config_builder/: ConfigPanel.ts  FileBrowser.ts  YamlPanel.ts  docs.ts  fieldHelp.ts  index.ts  plugin.ts  python.ts  text.ts
jupyter_bioacoustic/src/config_builder/sections/: AppSection.ts  AudioSection.ts  CollapsibleSection.ts  ConfigFilesSection.ts  ConfigSummary.ts  DataSection.ts  DescriptionSection.ts  FormPreview.ts  FormSection.ts  OutputSection.ts  ProjectSection.ts  SecretsEditor.ts  SetupSection.ts  TemplateForm.ts
jupyter_bioacoustic/src/py/: build_spectrogram.py  gen_chunks.js  spectrogram_mel.py  spectrogram_plain.py  spectrogram_render.py
jupyter_bioacoustic/src/sections/: ClipTable.ts  DescriptionPanel.ts  FormPanel.ts  InfoCard.ts  Player.ts
jupyter_bioacoustic/templates/: annotate.yaml  quick_validate.yaml  review_detections.yaml
jupyter_bioacoustic/utils/: audio.py  visualizations.py
myst/: main.md  styles.css
myst/sections/: annotations.md  audio-io.md  audio.md  config-builder.md  customizable-forms.md  data.md  examples.md  features.md  form-examples.md  install.md  intro.md  overview.md  params.md  projects.md  usage.md  visualizations.md
tests/: test_api.py  test_audio.py  test_cli.py  test_config_builder.py  test_installer_launcher.py  test_kernel_helpers.py  test_logging.py  test_summary.py  test_templates.py  test_validation.py  test_visualizations.py
tools/: __init__.py  analysis.py
