[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-bioacoustic"
version = "0.9.0"
description = "JupyterLab bioacoustic audio review plugin"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [
    {name = "Brookie Guzder-Williams", email = "bguzder-williams@berkeley.edu"},
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "jupyterlab>=4.0.0,<5",
    "numpy",
    "matplotlib",
    "pandas",
    "soundfile",
    "pydub",
    "audioop-lts; python_version>='3.13'",
    "boto3",
    "pyyaml",
    "click>=8.0",
]

[project.scripts]
jba = "jupyter_bioacoustic.cli:main"

[project.urls]
Homepage = "https://github.com/SchmidtDSE/jupyter_bioacoustic"
Documentation = "https://github.com/SchmidtDSE/jupyter_bioacoustic/wiki"

[project.optional-dependencies]
demo = [
    "ipyleaflet",
    "shapely",
    "seaborn",
    "requests",
]

[tool.hatch.build.targets.wheel]
artifacts = ["jupyter_bioacoustic/labextension"]

# Note: the config-builder templates (jupyter_bioacoustic/templates/*.yaml) ship
# via normal package inclusion — they're VCS-tracked through a !negation in
# .gitignore. A force-include here would double-add them and break the wheel.

# Install pre-built labextension into JupyterLab's shared data directory
# so `pip install` auto-registers it (no `develop.py` step needed).
[tool.hatch.build.targets.wheel.shared-data]
"jupyter_bioacoustic/labextension" = "share/jupyter/labextensions/jupyter-bioacoustic"

# --- pixi ---

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
jupyterlab = ">=4.0,<5"
nodejs = ">=20,<21"
python = ">=3.11"
numpy = "*"
matplotlib = "*"
pandas = "*"

[tool.pixi.pypi-dependencies]
jupyter-bioacoustic = { path = ".", editable = true }

# Re-link the dev labextension into every pixi env on activation, so a pip
# editable reinstall can't leave JupyterLab serving a stale bundle. Dev-only
# (pixi config); has no effect on pip-installed users. See dev-relink.sh.
[tool.pixi.activation]
scripts = ["dev-relink.sh"]

[tool.pixi.tasks.relink]
cmd = "python develop.py"

[tool.pixi.tasks.jlpm-install]
cmd = "jlpm install"
cwd = "jupyter_bioacoustic"

[tool.pixi.tasks.build]
cmd = "rm -rf labextension && jlpm run clean && jlpm run build:lib && jlpm run build:labextension:dev && cd .. && python develop.py"
cwd = "jupyter_bioacoustic"
depends-on = ["jlpm-install"]

[tool.pixi.tasks.build-release]
cmd = "rm -rf labextension && jlpm run clean && jlpm run build:prod && cd .. && python develop.py"
cwd = "jupyter_bioacoustic"
depends-on = ["jlpm-install"]

[tool.pixi.tasks.setup]
# "jupyter labextension develop" is broken for this layout — develop.py does it manually.
cmd = "python -m ensurepip --upgrade && python -m pip install -e . && python develop.py"
depends-on = ["build"]

[tool.pixi.tasks.tests]
cmd = "cd jupyter_bioacoustic && jlpm test && cd .. && pixi run -e test pytest tests/ -v"

[tool.pixi.tasks.typecheck]
cmd = "npx tsc --noEmit"
cwd = "jupyter_bioacoustic"
depends-on = ["jlpm-install"]

[tool.pixi.tasks.watch]
cmd = "jlpm run watch:src"
cwd = "jupyter_bioacoustic"

[tool.pixi.environments]
default = { features = [] }
dev = { features = ["dev"] }
demo = { features = ["demo"] }
demo-oss = { features = ["demo", "oss"] }
mystmd = { features = ["mystmd"] }
test = { features = ["test"] }

[tool.pixi.feature.test.dependencies]
pytest = ">=9.0.3,<10"

[tool.pixi.feature.dev.dependencies]
twine = "*"

[tool.pixi.feature.dev.pypi-dependencies]
build = "*"

[tool.pixi.feature.demo.dependencies]
ffmpeg = "*"

[tool.pixi.feature.demo.pypi-dependencies]
ipyleaflet = "*"
shapely = "*"
seaborn = "*"
requests = "*"
duckdb = ">=1.5.2, <2"
librosa = "*"

[tool.pixi.feature.oss]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.feature.oss.dependencies]
python = ">=3.11,<3.13"
numpy = "<2"

[tool.pixi.feature.oss.pypi-dependencies]
opensoundscape = ">=0.12,<1"

[tool.pixi.feature.mystmd.pypi-dependencies]
ipyleaflet = "*"
shapely = "*"
seaborn = "*"
requests = "*"
duckdb = ">=1.5.2, <2"

[tool.pixi.feature.mystmd.dependencies]
mystmd = ">=1.8.0, <2"
